demo/konvoy/demo-virtual-event/demo2/mongo/01_deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo
  namespace: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4.0
          ports:
            - name: mongo
              containerPort: 27017
