demo/konvoy/demo-virtual-event/demo2/mongo/02_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mongo
  labels:
    app: mongo
spec:
  ports:
    - protocol: TCP
      name: mongo
      port: 27017
  selector:
    app: mongo
