demo/konvoy/demo-virtual-event/demo2/mongo/03_ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mongo
  namespace: mongo
  labels:
    app: mongo
spec:
  entryPoints:
    - mongo
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mongo
      port: 27017
